# cv_generator

./: .gitignore  AGENTS.md  README.md  consideration.md  cv_generator.toml.example  cvgen_webui.py  final_audit.md  generate_cv.py  mkdocs.yml  plan.md  plan_future.md  plans_master_index.md  pyproject.toml  requirements-lock.txt  webui_requirements.txt
.github/: copilot-instructions.md
.github/instructions/: data-normalization.instructions.md  tests.instructions.md  ui-rendering.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
Lang_engine/: create_lang.py  lang.json  test_create_lang.py  test_translate_cv_keys.py  translate_cv_keys.py
data/: my_cv.json
data/assets/: logo_map.json  ramin_changing_url.json  tags.csv
data/cvs/: mahsa.json  ramin.json  ramin_de.json  ramin_en.json  ramin_fa.json
docs/: MIGRATION.md  api.md  cli.md  contributing.md  copilot-background-jobs.md  development-workflow.md  erd.txt  example.md  import-export.md  index.md  installation.md  integration_contract.md  json-schema.md  language_aware_tagging.md  languages.md  multi-language.md  output-structure.md  plugins.md  quickstart.md  schema_v2.md  sqlite_tagging_cookbook.md  testing.md  troubleshooting.md  user-guide.md
docs/visual-proof/mahsa/: RENDERING_PROOF.txt  certificates.tex  education.tex  experience.tex  header.tex  language.tex  layout.tex  references.tex  skills.tex
docs/visual-proof/ramin/: RENDERING_PROOF.txt  certificates.tex  education.tex  experience.tex  header.tex  language.tex  layout.tex  projects.tex  publications.tex  references.tex  skills.tex
example/: empty.json  minimal.json
examples/: sqlite_workflows.md
plans/: plan11.md  plan13.md  plan3.md  plan5.md  plan6.md  plan7.md  plan8.md  plan9.md  plans_index.md
plans_archive/: original_master_plan.md  original_plans_index.md
plans_backend/: index.md  plan0_backend_setup.md  plan1_data_model.md  plan2_api_design.md  plan3_admin_tooling.md  plan4_security.md  plan5_static_media.md  plan6_testing.md  plan7_ci_deployment.md
plans_frontend/: index.md  plan0_frontend_readiness.md  plan11_comments_i18n.md  plan1_project_setup.md  plan2_layout_theme.md  plan4_advanced_features.md  plan8_enhanced_ui_c.md  plan9_seo_analytics.md
plans_shared/: index.md  plan1_qa_documentation.md  plan3_infrastructure_b.md
plugins/: custom_exporter_plugin.py  custom_section_plugin.py  data_transform_plugin.py
project/: AUDIT_REPORT.md  considerations.md  cv_generator.toml.example  mkdocs.yml  report_suggestion.md
project/docs/: MIGRATION.md  changelog.md  config-reference.md  contributing.md  development-workflow.md  example.md  index.md  languages.md  multi_language_crud.md  output-structure.md  quickstart.md  sqlite_tagging_cookbook.md  templates.md  troubleshooting.md  webui_cookbook.md
project/plugins/: custom_exporter_plugin.py  data_transform_plugin.py  example_plugin.py
project/scripts/: verify_output_paths.py
project/src/cv_generator/: assets.py  cleanup.py  cli.py  crud.py  (+10 more)
project/tests/: __init__.py  conftest.py  snapshot_utils.py  test_cleanup.py  test_cli.py  test_crud.py  test_db.py  test_ensure.py  test_generator.py  test_hooks.py  test_integrity.py  test_jinja_env.py  test_path_config.py  test_security.py  test_skills_tagging.py  test_tex_diff.py  test_translate_cv_keys.py  test_validate_schema.py  test_vocabulary.py  test_web.py
scripts/: analyze_function_usage.py  code_audit.py  final_audit.py  find_duplicates.py  find_unused_imports.py  generate_audit_report.py  make_translate_csv.py  remove_dead_code.py  smoke_validate.py  test_cv_generation.py  verify_output_paths.py
scripts/audit_categories/: __init__.py  code_quality_audit.py  database_audit.py  documentation_audit.py  export_audit.py  import_audit.py  security_audit.py  sync_audit.py  web_ui_audit.py
scripts/example/: empty.json
site/: 404.html  index.html
site/cli/: index.html
site/config-reference/: index.html
site/example/: index.html
site/installation/: index.html
site/json-schema/: index.html
site/languages/: index.html
site/plugins/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/sqlite_tagging_cookbook/: index.html
site/templates/: index.html
site/troubleshooting/: index.html
src/cv_generator/: __init__.py  assets.py  audit_cli.py  cache.py  cleanup.py  cli.py  config.py  crud.py  db.py  doctor.py  ensure.py  entry_path.py  erd_parser.py  errors.py  errors_enhanced.py  export_mappings.py  export_verify.py  exporter_v2.py  generator.py  hooks.py  import_mappings.py  importer_v2.py  integrity.py  io.py  jinja_env.py  languages_config.py  latex.py  logging_config.py  paths.py  paths_config.py  person.py  plugins.py  registry.py  report.py  scaffold.py  schema_v2.py  schema_validator.py  sync_engine.py  tags.py  tex_diff.py  (+4 more)
templates/: certificates.tex  education.tex  experience.tex  header.tex  language.tex  layout.tex  projects.tex  publications.tex  references.tex  skills.tex
tests/: conftest.py  snapshot_utils.py  test_assets.py  test_cache.py  test_cleanup.py  test_cli.py  test_code_audit.py  test_config.py  test_create_lang.py  test_crud.py  test_db.py  test_doctor.py  test_edge_cases.py  test_ensure.py  test_erd_parser.py  test_errors_enhanced.py  test_exporter_v2.py  test_exporters.py  test_generator.py  test_importer_v2.py  test_io.py  test_jinja_env.py  test_language_aware_tags.py  test_language_config.py  test_logging_config.py  test_paths.py  test_person.py  test_registry.py  test_regression.py  test_report.py  test_roundtrip.py  test_scaffold.py  test_schema_v2.py  test_sections.py  test_security.py  test_skills_tagging.py  test_sync_engine.py  test_translate_cv_keys.py  test_variant_manager.py  test_watch.py  (+2 more)
tests/e2e/: test_cli_e2e.py
tests/integration/: __init__.py  test_rendering.py
tests/unit/: test_snapshot_utils.py
tools/: __init__.py  basics.py  build.py  certifications.py  dispatcher.py  education.py  experiences.py  io_utils.py  languages.py  profiles.py  projects.py  publications.py  references.py  skills.py  tex_utils.py
(+91 files in other folders)
