[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-generator"
version = "1.0.0"
description = "Generate beautiful PDF CVs from JSON data using Jinja2 templates and Awesome-CV"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CV Generator Contributors"}
]
keywords = ["cv", "resume", "pdf", "latex", "jinja2", "awesome-cv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
cvgen = "cv_generator.cli:main_cli"

[project.urls]
Homepage = "https://github.com/Raminyazdani/cv_generator"
Repository = "https://github.com/Raminyazdani/cv_generator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.tex", "*.cls"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/cv_generator"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
